# lambda-rest-router

./: LICENSE  README.md  pyproject.toml  setup.py  shell.nix
lambda_rest_router/: router.py
