[build-system]
requires = ["setuptools>=67.4", 'wheel>=0.38']
build-backend = "setuptools.build_meta"

[project]
name = "lambda_rest_router"
version = "0.0.2"
authors = [
  { name="Stojce Slavkovski", email="stojce@me.com" },
]
description = "AWS Lambda REST router for AWS API Gateway"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stojce/lambda-rest-router"
"Bug Tracker" = "https://github.com/stojce/lambda-rest-router/issues"